[et] update snippets.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104844 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/et/snippets.lang
+++ b/et/snippets.lang
@@ -118,10 +118,10 @@ Kutsu sõbrad Firefoxi tulevasi võimalusi vaatama. <a href="%">Hakka meie partn
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Kasutad Firefoxi mitmel arvutil? Nüüd saad ka paigaldatud lisasid sünkroniseerida. <a href="%">Vaata, kuidas Sync'i aktiveerida.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Kiire. Väga kiire. <a %s>Firefoxi Androidi versioonile tuli välja tähtis uuendus</a>. Aita meil uudist levitada.
 
 
