l10n: sr, translation for locales
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104860 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sr/download.lang
+++ b/sr/download.lang
@@ -19,7 +19,7 @@
 
 
 ;Thanks for choosing Firefox!
-Хвала што сте одабрали фајерфокс!
+Хвала што сте одабрали Фајерфокс!
 
 
 ;Your download should automatically begin in a few seconds, but if not, <a href="%s">click here</a>.
