--- a/sr/firefoxtesting.lang
+++ b/sr/firefoxtesting.lang
@@ -2,11 +2,11 @@
 
 
 ;Download Firefox Beta for Android - Free
-Преузмите Фајерфокс бета за Андроид - бесплатно
+Преузмите Фајерфокс бету за Андроид - бесплатно
 
 
 ;Download Firefox Beta for Desktop - Free
-Преузмите Фајерфокс бета за стони рачунар - бесплатно
+Преузмите Фајерфокс бету за столни (десктоп) рачунар - бесплатно
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
