--- a/sr/main.lang
+++ b/sr/main.lang
@@ -51,7 +51,7 @@
 
 
 ;Back to home page
-Назад на прву страну
+Назад на почетну страну
 
 
 ;About Mozilla
@@ -71,11 +71,11 @@
 
 
 ;Press Center
-Прес-центар
+За медије
 
 
 ;Contact Us
-Пишите нам
+Контактирајте нас
 
 
 ;Site contact
@@ -111,7 +111,7 @@
 
 
 ;Download Firefox - Free
-Набавите фајерфокс - бесплатно
+Набавите Фајерфокс - бесплатно
 
 
 ;Release Notes
@@ -123,7 +123,7 @@
 
 
 ;Get Firefox
-Набавите фајерфокс
+Набавите Фајерфокс
 
 
 ;Free Download
@@ -131,7 +131,7 @@
 
 
 ;Help us make Firefox even better!
-Помозите нам да учинимо фајерфокс још бољим!
+Помозите нам да учинимо Фајерфокс још бољим!
 
 
 ;Take a few moments to take a quick survey and share your thoughts with us.
@@ -147,19 +147,19 @@
 
 
 ;Download Now - Free
-Преузмите одмах - БЕСПЛАТНО
+Преузмите одмах - Бесплатно
 
 
 ;Return to top
-Врати се на врх
+Вратите се на врх
 
 
 ;You should <a href="http://get.adobe.com/flashplayer/">update Adobe Flash Player</a> right now.
-Требали бисте да <a href="http://get.adobe.com/flashplayer/">надоградите Adobe Flash Player</a> одмах.
+Требали бисте да <a href="http://get.adobe.com/flashplayer/">надоградите Адобе флеш плејер (Flash player)</a> одмах.
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-Фајерфокс је ажуриран, али Ваша тренутна верзија флеш плејера (Flash Player) може довести до проблема са стабилношћу вашег веб читача.  Молимо Вас да <a href="http://get.adobe.com/flashplayer/">да инсталирате бесплатну надоградњу</a> што пре.
+Фајерфокс је ажуриран, али Ваша тренутна верзија Флеш плејера (Flash Player) може довести до проблема са стабилношћу вашег веб прегледача.  Молимо Вас да <a href="http://get.adobe.com/flashplayer/">да инсталирате бесплатну надоградњу</a> што пре.
 
 
 ;Features
@@ -191,7 +191,7 @@
 
 
 ;Download Firefox directly from your phone
-Преузмите фајерфокс директно са свог мобилног телефона
+Преузмите Фајерфокс директно са свог мобилног телефона
 
 
 ;Download
@@ -287,7 +287,7 @@
 
 
 ;Journey to the Future with Firefox
-Путовање кроз време уз фајерфокс
+Путовање кроз време уз Фајерфокс
 
 
 ;Join the Beta Program
@@ -295,7 +295,7 @@
 
 
 ;Experience Firefox
-Искусите фајерфокс
+Искусите Фајерфокс
 
 
 ;The future of the Web is waiting for you!
@@ -311,11 +311,11 @@
 
 
 ;Experience tomorrow's Web today.
-Искусите веб сутрашњице данас.
+Искусите Феб сутрашњице данас.
 
 
 ;Check out the new look and feel of Firefox.
-Пробајте нови изглед и осећај фајерфокса.
+Пробајте нови изглед и осећај Фајерфокса.
 
 
 ;Browse the future of the Web.
@@ -323,7 +323,7 @@
 
 
 ;See Firefox with a new look and feel.
-Упознајте нови изглед и осећај фајерфокса.
+Упознајте нови изглед и осећај Фајерфокса.
 
 
 ;Download Beta Now.
@@ -339,66 +339,66 @@
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Набавите Фајерфокс за Андроид
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Преузмите за <span>Андроид</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Бесплатно са Гугл плеј (Google Play Store) продавнице
 
 
 ;Desktop
-Десктоп
+Столни
 
 
 ;Firefox Beta for mobile
-Firefox Beta for mobile
+Фајерфокс бета за мобилне уређаје
 
 
 ;Firefox for mobile
-Firefox for mobile
+Фајерфокс за мобилне урешаје
 
 
 ;Email
-Email
+Е-пошта
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
-Mozilla Firefox. Bringing the modern Web to XP.
+Мозила фајерфокс. Доноси модеран веб на Икс-пе (XP) .
 
 
 ;Super speed
-Super speed
+Изузетна брзина
 
 
 ;Stunning graphics
-Stunning graphics
+Запањујућа графика
 
 
 ;The latest technologies
-The latest technologies
+Најновије технологије
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
+Користите стару верзију Фајерфокса. Набавите Вашу надоградњу како би остали безбедни! <br/> <a href="%s">Преузмите бесплатну надоградњу</a> у року мањег од минута како би добили последње могућности, брзину и безбедносне исправке.
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
+Потребна Вам је надоградња! Останите безбедни у року мањег од минута. <br/> Почните користити Фајерфокс како би добили најбоље у прегледавању и уређивању на вебу. <br/>   Брз је, и бесплатан!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
+Користите стару верзију Фајерфокса. Набавите <a href="%s">Вашу надоградњу</a> како би остали безбедни! <br/> Искусите последње могућности, безбедносне исправке, и најбржег Фајерфокса до сада. Преузмите бесплатну надоградњу у року мањег од минута.
 
 
 ;Upgrade now
-Upgrade now
+Надоградите сада
 
 
 ;Update now
-Update now
+Доградите сада
 
 
