--- a/sr/newsletter.lang
+++ b/sr/newsletter.lang
@@ -46,134 +46,129 @@
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-Једва чекамо да почнемо да делимо савете и трикове о томе како искористити фајерфокс максимално, као и узбудљиве вести из Мозиле и шта ми то радимо да бисмо побољшали Мрежу.
+Једва чекамо да почнемо да делимо савете и трикове о томе како искористити Фајерфокс максимално, као и узбудљиве вести из Мозиле и шта ми то радимо да бисмо побољшали веб.
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+Претплатите се на месечне новости и будите у току са Мозила вестима, укључујући савете и трикове како би добили најбоље од Вашег Фајерфокса. Ово је најбољи начин да останемо у контакту.
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+Управо смо Вам послали поруку коју требате да потврдите у е-пошти. Притисните на потврђујућу везу у е-пошти како би потврдили Вашу претплату на ову дописну листу.
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+Читајте све о томе у нашем <span>билтену</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
-
+Ваша претплата на наш билтен је потврђена.
 
 ;Format
 Format
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Све је спремно! <span>Али сачекајте, има још тога</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Желите да добијете најрелевантније информације? Реците нам мало више о Вама. И када сте већ ту, пријавите се за остале Мозила новости.
 
 
 ;Firefox & You
-Firefox & You
+Фајерфокс и Ви
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Наши остали билетни:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Добијте последње савете и трикове како би добили најбоље из Вашег омиљеног прегледача.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Мобилни Фајерфокс
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Сазнајте о најбољим додацима и могућностима за мобилни Фајерфокс.
 
 
 ;Beta News
-Beta News
+Бета новости.
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Читајте о најновијим могућностима за столни и мобилни Фајерфокс пре коначног издања.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Будимо пријатељи!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Фајерфокс је и на Вашим омиљеним друштвеним мрежама. Повежите се са нама и укључите се у разговору.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Управљајте Вашим <span>билетним претплатама</span>
 
 
 ;Subscribe
-Subscribe
+Претплатите се
 
 
 ;Unsubscribe
-Unsubscribe
+Одјавите се
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Притисните овде уколико желите да будете уклоњени са свих Мозила е-пошта
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
-
+Уклони ме са свих Мозила е-пошта
 
 ;Save Preferences
-Save Preferences
+Сачувај подешавања
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
-
+Хвала Вам на освежавању Ваших е-пошта подешавања.
 
 ;You've been unsubscribed.
-You've been unsubscribed.
-
+Одјавили сте се.
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Жао нам је што идете. Да ли Вам сметало ако би нам рекли зашто нас напуштате?
 
 
 ;You send too many emails.
-You send too many emails.
-
+Шаљете превише е-поште.
+ 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Ваш садржај није био релевантан за мене.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Ваш дизајн е-поште је био претежак за читање.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Нисам се пријавио за ово.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Уместо овога, остаћу у контакту са Мозилом на Фејсбуку и Твитеру.
 
 
 ;Submit
-Submit
-
+Достави
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Хвала Вам што сте изнели Ваш разлог зашто нас напуштате.
 
 
