--- a/sr/snippets.lang
+++ b/sr/snippets.lang
@@ -2,126 +2,124 @@
 
 
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-Понесите фајерфокс са собом! Најновији фајерфокс за Андроид је доступан и спреман за Вас да уживате у њему. <a href="%s">Добавите га одмах.</a>
+Понесите Фајерфокс са собом! Најновији Фајерфокс за Андроид је доступан и спреман за Вас да уживате у њему. <a href="%s">Добавите га одмах.</a>
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
-Сада када имате најновију верзију, <a href="%s">научите о свим новим супер стварима</a> које можете урадити са својим фајерфоксом.
+Сада када имате најновију верзију, <a href="%s">научите о свим новим супер стварима</a> које можете урадити са својим Фајерфоксом.
 
 
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
-Ви не користите најновију верзију фајерфокса. <a href="%s">Надоградите данас</a> да бисте узели најбоље од Интернета!
+Ви не користите најновију верзију Фајерфокса. <a href="%s">Надоградите данас</a> да бисте узели најбоље од Интернета!
 
 
 ;Get the latest Firefox features first in <a href="%s">Aurora</a>.
-Будите први који ће искусити најновије могућности фајерфокса користећи <a href="%s">Аурору</a>.
+Будите први који ће искусити најновије могућности Фајерфокса користећи <a href="%s">Аурору</a>.
 
 
 ;Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
-Завирите у будућност фајерфокса. <a href="%s">Преузмите фајерфокс Аурора</a> и тестирајте најновије могућности.
+Завирите у будућност Фајерфокса. <a href="%s">Преузмите Фајерфокс аурору</a> и тестирајте најновије могућности.
 
 
 ;Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
-Пре фајерфокса постоји Бета, а пре Бете постоји Аурора. <a href="%s">Пробајте фајефокс Аурора</a> одмах како бисте испробали најновије могућности.
+Пре Фајерфокса постоји бета, а пре бете постоји Аурора. <a href="%s">Пробајте Фајефокс аурору</a> одмах како бисте испробали најновије могућности.
 
 
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
-<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
+<a href="%s">Постаните Фајерфокс промотер</a> и добијте све што требате како би поделили Фајерфокс са светом!
 
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
+Фајерфокс је са поносом непрофитан, и слободан да иновира у Вашу корист без компромиса. <a href="%s">Сазнајте више</a> о нашој мисији.
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
+Брз, флексибилан и сигуран, Фајерфокс је једини прегледач који Вас ставља на прво место. <a href="%s">Сазнајте више</a> шта нас то чини другачијим по дизајну.
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-
+<a href="%s">Преузмите Фајерфокс на Вашем Андроид таблету</a> и ставите моћ веба право у Ваше руке. Набавите га сада.
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
+Држите Ваше прикључке ажурним како би остали сигурни на интернету са <a href="%s">провером прикључака</a>.
 
 
 ;Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
-Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
+Нека Ваш Фајерфокс буде у стилу. Обуците га са најновијим <a href="%s">Персона темама</a>.
 
 
 ;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
-Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
+Превише језичака? Повратите прегледност Вашег прегледача са <a href="%s">Панорамом</a>.
 
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
+Не постоје два иста корисника Фајерфокса. <a href="%s">Додајте било које дугме</a> или уклоните оно које не желите да користите. Десним притиском на почетно дугме и одаберите прилагоди.
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
+Обуците Ваш Фајерфокс са Персона темама. Пређите преко њих како би их пробали, притисните да би сте их поставили. Или посетите <a href="%s">галерију</a> за хиљаду више!
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
+Испробајте први најновије могућности, чак пре него што дођу у бету. <a href="%s">Преузмите Фајерфокс аурору.</a>
 
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
-<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
+<a href="%s">Преузмите Фајерфокс аурору</a> како би тестирали могућности и помогли нам да утврдимо шта ће бити у бети.
 
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
+Ступите рано у тестирање, и помозите нам да обликујемо будућност Фајерфокса. <a href="%s">Преузмите Фајерфокс аурору.</a>
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
+Фајерфокс за Андроид је сада прилагођен начину на који Ви прегледавате веб на таблетима. <a href="%s">Имајте моћ веба на дохват прстију.</a>.
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
+Преузмите Фајерфокс на Вашем Андроид таблету и имајте моћ веба у Вашим рукама. <a href="%s">Набавите га одмах</a>.
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Преузмите Фајерфокс бету</a>, пошаљите повратне информације, и помозите нам да следећи Фајерфокс учинимо још бољим за нашим 450 милиона корисника.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Тестирајте могућности, усавршите и исполирајте их и помозите нам да следећу верзију учинимо бољом неко икад. <a href="%">Преузмите Фајерфокс бету данас!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Волите Фајерфокс? Желите да помогнете и учините следећу верзију још бољом? <a href="%">Преузмите Фајерфокс бету</a> и поделите Ваш утисак са нама!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+Да ли користите најновију верзију Фајерфокс бете? <a href="%">Набавите је сада</a> и помозите нам да тестираме најновије могућности.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Нисте на најновијој Фајерфокс бети? <a href="%">Набавите је данас</a> како би остали у току на ономе што радимо за следећу верзију.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-
+Желите да поделите Ваш утисак? <a href="%">Сазнајте како</a> и помозите да учинимо следећу верзију још бољом.
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Корисници Фајерфокс бете: Не заборавите да <a href="%">поделиде Ваше утиске</a> како би помогли нама да урадимо завршна подешавања за нашу следећу верзију.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Помозите нам да следећу верзију Фајерфокса учинимо још бољом. <a href="%">Постаните промотер</a> и поделите Фајерфокс бету са Вашим пријатељима.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Позовите Ваше пријатеље да испробају надолазеће могућности Фајерфокса. <a href="%">Постаните промотер</a> и поделите Фајерфокс аурору данас.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Користите Фајерфокс на више рачунара? Сада можете ускладити Ваше додатке међу њима. <a href="%">Сазнајте како да активирате Синк.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Брз, брз, брз. <a %s>Фајерфокс за Андроид је добио велику надоградњу</a>. Помозите нам да проширимо реч.
 
 
