--- a/sr/upgradedialog.lang
+++ b/sr/upgradedialog.lang
@@ -1,9 +1,9 @@
 ;Get the Newest Firefox
-Преузмите најновији фајерфокс
+Преузмите најновији Фајерфокс
 
 
 ;The Newest Firefox is Here!
-Најновији фајерфокс је ту!
+Најновији Фајерфокс је ту!
 
 
 ;<a %s>Quick, easy and free update</a>
@@ -15,7 +15,7 @@
 
 
 ;Much faster than Firefox 3.6
-Много бржи од фајерфокса 3.6
+Много бржи од Фајерфокса 3.6
 
 
 ;More awesomeness than ever
@@ -23,7 +23,7 @@
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-Постоји нова верзија фајерфокса која Вас може боље заштити од напада на интернету.
+Постоји нова верзија Фајерфокса која Вас може боље заштити од напада на интернету.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -41,7 +41,7 @@
 уживајте у већој могућности прилагођавања
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Ваша верзија фајерфокса ће ускоро бити рањива од напада на интернету.
+Ваша верзија Фајерфокса ће ускоро бити рањива од напада на интернету.
 
 ;Stay safe online
 Останите безбедни на интернету
@@ -56,7 +56,7 @@
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Ваша верзија фајерфокса Вас више не чува од опасности на интернету.
+Ваша верзија Фајерфокса Вас више не чува од опасности на интернету.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
@@ -76,7 +76,7 @@
 
 
 ;Downloading a compatible browser
-Преузимањем одговарајућег Интернет прегледача
+Преузимањем одговарајућег веб прегледача
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
