Mar 29 12 snippets.lang changes
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104867 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/csb/snippets.lang
+++ b/csb/snippets.lang
@@ -122,6 +122,6 @@ Môsz Firefoksa na wicy jak jednym kòmpùtrze? Terô mòżesz synchronizowac do
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Chùtczi, chùtczészi. <a %s>Firefox dlô Androida tëli co òstał zaktualniony</a>. Pòmòżë nama ò tim rozgłosëc.
 
 
