[br] New strings for snippets.lang and newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104913 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/br/newsletter.lang
+++ b/br/newsletter.lang
@@ -62,7 +62,7 @@ Dizoloit hol <span>lizher kelaouiñ</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Kadarnaet eo bet ho koumanant d'al lizher kelaouiñ.
 
 
 ;Format
@@ -70,110 +70,110 @@ Mentrezh
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Prest oc'h ! <span>Met gortozit, n'eo ket echu</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Fellout a ra deoc'h kaout ar c'heleier talvoudusañ evidoc'h ? Lavarit deomp un nebeud traoù a-zivout ac'hanoc'h. Ha pa'z emaoc'h amañ, koumanantit da lizhiri kelaouiñ all a-zivout Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox ha c'hwi
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Hol lizhiri kelaouiñ all :
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Kaout an tunioù ha korvigelloù diwezhañ a-benn kaout ar pep gwellañ eus ho merdeer gwellañ plijet.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox evit an hezougelloù
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Deskit traoù a-zivout an askouezhioù hag ar c'heweriusterioù diwezhañ evit Firefox evit an hezougelloù.
 
 
 ;Beta News
-Beta News
+Keleier an handelv Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Lennit traoù a-zivout keweriusterioù diwezhañ an handelvoù evit an urzhiataerioù burev hag an hezougelloù eus Firefox a-raok an ermaeziadur diwezhañ.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Bezomp mignoned !
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+War ho rouedadoù kevredadel muiañ plijet emañ ivez Firefox. Kit e darempred ganeomp ha kemerit perzh er gaozeadenn.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Ardeiñ ho <span>koumanantoù</span>
 
 
 ;Subscribe
-Subscribe
+Koumanantiñ
 
 
 ;Unsubscribe
-Unsubscribe
+Digoumanantiñ
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Kevaskit amañ mar fell deoc'h bezañ digoumanantet eus an holl lizhiri kelaouiñ eus Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Digoumanantiñ ac'hanon eus an holl lizhiri kelaouiñ eus Mozilla
 
 
 ;Save Preferences
-Save Preferences
+Enrollañ ar gwellvezioù
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Trugarez deoc'h da vezañ hizivaet ho kwellvezioù.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Digoumanantet oc'h bet.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Diskonfort omp da welout ac'hanoc'h mont kuit. Fellout a ra deoc'h lavar deomp perak ez it kuit ?
 
 
 ;You send too many emails.
-You send too many emails.
+Kas a rit re a bosteloù.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+An endalc'had ne oa ket talvoudus evidon.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Re ziaes da lenn e oa ho postel
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+N'em eus ket koumanantet d'an dra-se.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Mont a ran e darempred gant Mozilla war Facebook pe dTwitter en e lec'h.
 
 
 ;Submit
-Submit
+Kas
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Trugarez deoc'h da vezañ lavaret deomp perak ez it kuit.
 
 
