--- a/br/snippets.lang
+++ b/br/snippets.lang
@@ -118,10 +118,10 @@ Pedit mignoned da zizoleiñ keweriusterioù a zeu Firefox. <a href="%">Deuit da 
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Arverañ a rit Firefox war meur a urzhiataer ? Bremañ e c'hellit goubredañ hoc'h askouezhioù war bep hini anezho. <a href="%">Dizoloit penaos gweredekaat Sync.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Herrek, herrek, herrek. <a %s>Un hizivadur pouezus zo bet evit handelv Android eus Firefox</a>. Skoazellit deomp reiñ da c'houzout ar c'heloù.
 
 
