l10n: add a new string for the newsletter center (tab title)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104961 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ach/newsletter.lang
+++ b/ach/newsletter.lang
@@ -1,3 +1,6 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+
+
 ;Get Monthly News
 Nong Lamut Dwe ki dwe
 
@@ -172,3 +175,9 @@ Cwali
 
 ;Thanks for telling us why you’re leaving.
 Pwoc me kobi wa pingo itye ka aa woko.
+
+
+;Mozilla Newsletters
+Mozilla Newsletters
+
+
