--- a/as/newsletter.lang
+++ b/as/newsletter.lang
@@ -177,3 +177,7 @@ Firefox আপোনাৰ পছন্দৰ সামাজিক নেটৱ
 আপুনি কিয় এৰি গৈ আছে আমাক কোৱাৰ বাবে ধন্যবাদ।
 
 
+;Mozilla Newsletters
+Mozilla Newsletters
+
+
