--- a/csb/newsletter.lang
+++ b/csb/newsletter.lang
@@ -175,3 +175,9 @@ Selôj
 
 ;Thanks for telling us why you’re leaving.
 Dzãka ze rzekniãcé nama, dlôcze môsz sã wëpisóné.
+
+
+;Mozilla Newsletters
+Mozilla Newsletters
+
+
