--- a/cy/newsletter.lang
+++ b/cy/newsletter.lang
@@ -136,6 +136,7 @@ Tynnu oddi ar holl e-byst Mozilla
 ;Save Preferences
 Cadw Dewisiadau
 
+
 ;Thanks for updating your email preferences.
 Diolch am ddiweddaru eich dewisiadau e-bost.
 
@@ -174,3 +175,9 @@ Cyflwyno
 
 ;Thanks for telling us why you’re leaving.
 Diolch am ddweud pam rydych yn gadael.
+
+
+;Mozilla Newsletters
+Mozilla Newsletters
+
+
