--- a/el/newsletter.lang
+++ b/el/newsletter.lang
@@ -177,3 +177,7 @@ Firefox για κινητά
 Σας ευχαριστούμε που μας εξηγείτε τον λόγο αποχώρησης σας.
 
 
+;Mozilla Newsletters
+Mozilla Newsletters
+
+
