--- a/en-GB/newsletter.lang
+++ b/en-GB/newsletter.lang
@@ -160,3 +160,8 @@ Submit
 
 ;Thanks for telling us why you’re leaving.
 Thanks for telling us why you’re leaving.
+
+
+;Mozilla Newsletters
+Mozilla Newsletters
+
