--- a/es-MX/newsletter.lang
+++ b/es-MX/newsletter.lang
@@ -76,6 +76,7 @@ Formato
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
 ¿Quieres recibir la info más relevante? Cuéntanos un poco más de ti. Y ya que estás aquí, suscríbete a otras noticias de Mozilla.
 
+
 ;Firefox & You
 Firefox & tú
 
@@ -174,5 +175,9 @@ Enviar
 
 ;Thanks for telling us why you’re leaving.
 Thanks for telling us why you’re leaving.
+
+
+;Mozilla Newsletters
+Mozilla Newsletters
 
 
