--- a/ff/newsletter.lang
+++ b/ff/newsletter.lang
@@ -1,3 +1,6 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+
+
 ;Get Monthly News
 Heɓ kabaruuji lewriije
 
@@ -172,3 +175,9 @@ Naatnu
 
 ;Thanks for telling us why you’re leaving.
 A jaaraama e habrude-min ko waɗ maa yahde.
+
+
+;Mozilla Newsletters
+Mozilla Newsletters
+
+
