--- a/hy-AM/newsletter.lang
+++ b/hy-AM/newsletter.lang
@@ -177,3 +177,7 @@ Check here if you’d like to be removed from all Mozilla emails
 Շնորհակալ ենք անկեղծ պատասխանի համար։
 
 
+;Mozilla Newsletters
+Mozilla Newsletters
+
+
