--- a/ko/newsletter.lang
+++ b/ko/newsletter.lang
@@ -176,3 +176,8 @@ Mozilla 이메일 구독 취소
 ;Thanks for telling us why you’re leaving.
 왜 구독을 중단하는지 알려주셔서 감사합니다.
 
+
+;Mozilla Newsletters
+Mozilla Newsletters
+
+
