--- a/lv/newsletter.lang
+++ b/lv/newsletter.lang
@@ -176,3 +176,8 @@ Nosūtīt
 ;Thanks for telling us why you’re leaving.
 Paldies, ka izstāstījāt, kāpēc aizejat.
 
+
+;Mozilla Newsletters
+Mozilla Newsletters
+
+
