--- a/mk/newsletter.lang
+++ b/mk/newsletter.lang
@@ -97,14 +97,12 @@ Firefox за мобилни уреди
 Дознајте за најжешките нови додатоци и особености на Firefox за мобилни уреди.
 
 
-
 ;Beta News
-Вести за Beta 
+Вести за Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
 Прочитајте за последните особености на Firefox за десктоп и мобилни уреди пред последното издание.
-
 
 
 ;Let’s Be Friends!
@@ -177,5 +175,9 @@ Firefox е и на Вашите омилени друштвени мрежи. П
 
 ;Thanks for telling us why you’re leaving.
 Благодариме што ни кажавте зошто си одите.
+
+
+;Mozilla Newsletters
+Mozilla Newsletters
 
 
