--- a/ru/newsletter.lang
+++ b/ru/newsletter.lang
@@ -177,3 +177,7 @@ Firefox также можно найти в ваших любимых социа
 Спасибо, что рассказали нам, почему вы отписываетесь.
 
 
+;Mozilla Newsletters
+Mozilla Newsletters
+
+
