--- a/te/newsletter.lang
+++ b/te/newsletter.lang
@@ -56,6 +56,7 @@
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
 మేము యిప్పుడే మీ ఈమెయిల్‌కు వొక నిర్థారణ సందేశం పంపాము. ఈ మెయిలింగ్ జాబితానకు మీ సబ్‌స్క్రిప్షన్‌ను నిర్ధారించుటకు ఆ ఈమెయిల్ నందలి నిర్థారణ లంకెపై నొక్కుము.
 
+
 ;Read all about it in our <span>newsletter</span>
 దీని గురించి అంతా మా <span>వార్తాప్రతి</span> నందు చదవండి
 
@@ -174,5 +175,9 @@
 
 ;Thanks for telling us why you’re leaving.
 మీరు యెందుకు విడిచి వెళుతున్నారో మాకు చెప్పినందులకు ధన్యవాదములు.
+
+
+;Mozilla Newsletters
+Mozilla Newsletters
 
 
