--- a/af/newsletter.lang
+++ b/af/newsletter.lang
@@ -1,3 +1,6 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+
+
 ;Get Monthly News
 Kry maandeliks nuus
 
@@ -172,3 +175,9 @@ Submit
 
 ;Thanks for telling us why you’re leaving.
 Thanks for telling us why you’re leaving.
+
+
+;Mozilla Newsletters
+Mozilla Newsletters
+
+
