--- a/gd/newsletter.lang
+++ b/gd/newsletter.lang
@@ -1,3 +1,6 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+
+
 ;Get Monthly News
 Faigh na naidheachdan gach mìos
 
@@ -172,3 +175,9 @@ Cuir a-null
 
 ;Thanks for telling us why you’re leaving.
 Mòran taing son innse dhuinn carson a tha thu a' fàgail.
+
+
+;Mozilla Newsletters
+Mozilla Newsletters
+
+
