--- a/lt/newsletter.lang
+++ b/lt/newsletter.lang
@@ -1,4 +1,4 @@
-# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/lt/newsletter/new
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
 
 
 ;Get Monthly News
@@ -175,5 +175,9 @@ Pateikti
 
 ;Thanks for telling us why you’re leaving.
 Dėkojame už Jūsų atsakymą.
+
+
+;Mozilla Newsletters
+Mozilla Newsletters
 
 
