--- a/sr/newsletter.lang
+++ b/sr/newsletter.lang
@@ -64,6 +64,7 @@
 ;Your newsletter subscription has been confirmed.
 Ваша претплата на наш билтен је потврђена.
 
+
 ;Format
 Format
 
@@ -131,6 +132,7 @@ Format
 ;Remove me from all Mozilla emails
 Уклони ме са свих Мозила е-пошта
 
+
 ;Save Preferences
 Сачувај подешавања
 
@@ -138,8 +140,10 @@ Format
 ;Thanks for updating your email preferences.
 Хвала Вам на освежавању Ваших е-пошта подешавања.
 
+
 ;You've been unsubscribed.
 Одјавили сте се.
+
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
 Жао нам је што идете. Да ли Вам сметало ако би нам рекли зашто нас напуштате?
@@ -147,7 +151,7 @@ Format
 
 ;You send too many emails.
 Шаљете превише е-поште.
- 
+
 
 ;Your content wasn't relevant to me.
 Ваш садржај није био релевантан за мене.
@@ -168,7 +172,12 @@ Format
 ;Submit
 Достави
 
+
 ;Thanks for telling us why you’re leaving.
 Хвала Вам што сте изнели Ваш разлог зашто нас напуштате.
+
+
+;Mozilla Newsletters
+Mozilla Newsletters
 
 
