One new string for German newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104964 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/newsletter.lang
+++ b/de/newsletter.lang
@@ -178,6 +178,6 @@ Danke, dass Sie uns gesagt haben, warum Sie uns verlassen.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla-Newsletter
 
 
